Usage external image url

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
-<div>
+<!-- <div>
   <h1>{{ title }}</h1>
   <img src="../assets/ngrx.png" />
+</div> -->
+
+<div>
+  <h1>{{ title }}</h1>
+  <img src="https://ngrx.io/generated/images/guide/store/state-management-lifecycle.png" />
 </div>
 
 <app-counter></app-counter>
